Add t/basic.t Prep up for first release

--- a/README.pod
+++ b/README.pod
@@ -392,7 +392,6 @@ This feature was borrowed from L<strictures> and tweaked.
    IO::All
    Carp
    vendorlib
-   swd
    true
    autolocale
    Toolkit
@@ -401,8 +400,7 @@ Am I missing something?  Let me know.
 
 =head1 TODO
 
-While the module itself has been tested in the wild quite a bit, it could use some
-better *.t tests.
+Actually need to write sanity::sanity POD.
 
 =head1 AUTHOR
 
