--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ sanity - The ONLY meta pragma you'll ever need!
 
 =head1 VERSION
 
-version 0.91
+version 0.92
 
 =head1 SYNOPSIS
 
@@ -119,7 +119,7 @@ will hunt you down and break your keyboard in half.)
 =head3 The Default
 
 What does C<sanity> do without any parameters?  Why my personal preference, of course :)
-It's listed in the C<meta pragma> section of the L<LIST OF flags> below.  I detail the
+It's listed in the C<meta pragma> section of the L<LIST OF FLAGS> below.  I detail the
 reasons behind my choices L<here|sanity::sanity>.
 
 =head2 Hashes
@@ -220,7 +220,7 @@ normally fatally error.
 
 This feature was borrowed from L<strictures> and tweaked.   
 
-=head1 LIST OF flags
+=head1 LIST OF FLAGS
 
 =head2 Emulation of "meta pragmas"
 
@@ -259,7 +259,7 @@ This feature was borrowed from L<strictures> and tweaked.
    common::sense: (without the "memory usage" BS)
       utf8
       strict qw(subs vars)
-      feature qw(say state flag)
+      feature qw(say state switch)
       no warnings
       warnings FATAL => qw(closed threads internal debugging pack malloc portable prototype
                            inplace io pipe unpack deprecated glob digit printf
@@ -268,7 +268,7 @@ This feature was borrowed from L<strictures> and tweaked.
    uni::perl: (ditto)
       v5.10
       strict
-      feature qw(say state flag)
+      feature qw(say state switch)
       no warnings
       warnings qw(FATAL closed threads internal debugging pack substr malloc
                       unopened portable prototype inplace io pipe unpack regexp
@@ -288,7 +288,7 @@ This feature was borrowed from L<strictures> and tweaked.
       no strict 'refs'
       warnings FATAL => 'all'
       no warnings qw(uninitialized)
-      feature qw(say state flag)
+      feature
       no autovivification qw(fetch exists delete store strict)
       no indirect 'fatal'
       no multidimensional
