--- a/README.pod
+++ b/README.pod
@@ -2,21 +2,21 @@
 
 =head1 NAME
 
-sanity - The ONLY meta pragma you'll ever need!
+insanity - The ONLY meta pragma you'll ever need!
 
 =head1 SYNOPSIS
 
-   use sanity;
-   use sanity 'strictures';
-   use sanity 'Modern::Perl';
+   use insanity;
+   use insanity 'strictures';
+   use insanity 'Modern::Perl';
 
-   use sanity qw(
+   use insanity qw(
       strictures -warnings/uninitialized/FATAL
       NO:autovivification NO:autovivification/store
       PRINT_PRAGMA_HASH
    );
-   use sanity '!0*b^Npow{8T7_yZt<?cT6/?ZCO=Y0LV_Duoc';  # Safer ASCII version
-   use sanity '¡0ǲ鵆㤧뱞⡫瘑빸ን둈댬嚝⠨舁聼䮋';  # Shorter UTF8 version
+   use insanity '!0*b^Npow{8T7_yZt<?cT6/?ZCO=Y0LV_Duoc';  # Safer ASCII version
+   use insanity '¡0ǲ鵆㤧뱞⡫瘑빸ን둈댬嚝⠨舁聼䮋';  # Shorter UTF8 version
 
 =head1 DESCRIPTION
 
@@ -34,7 +34,7 @@ copying code on potentially hundreds of modules doesn't make sense, either.
 That was my mentality when I had a personal opinion of my own.  Why repeat the same
 problem like everybody else?
 
-This "sanity" module attempts to level the playing field by making it a
+This "insanity" module attempts to level the playing field by making it a
 B<customizable> personal pragma, allowing you to both reduce the code needed and
 still implement all of the modules/pragmas you need.
 
@@ -57,8 +57,8 @@ Let's start off with an example:
 
    # These three statements do the same thing as...
    use Modern::Perl;
-   use sanity 'Modern::Perl';
-   use sanity qw(strict warnings mro/dfs feature IO::File IO::Handle);
+   use insanity 'Modern::Perl';
+   use insanity qw(strict warnings mro/dfs feature IO::File IO::Handle);
 
    # ...these statements
    use strict;
@@ -79,7 +79,7 @@ call.
 
 You can turn off flags in the statement:
 
-   use sanity qw(Modern::Perl -mro/dfs);
+   use insanity qw(Modern::Perl -mro/dfs);
 
 This does the same thing as above, except it doesn't import the C<mro> pragma.  You
 can negate any flag, including combined aliases, as long as it makes sense.  In other
@@ -90,10 +90,10 @@ words, you need a positive included before you can negate something.
 Some pragmas work by using the C<B<unimport>> function, so that the English makes sense.
 To keep that syntax, these pragmas are included with a C<NO:> prefix:
 
-   use sanity 'NO:multidimensional';
-   use sanity 'NO:indirect/FATAL';
+   use insanity 'NO:multidimensional';
+   use insanity 'NO:indirect/FATAL';
 
-This will run the C<unimport> function on these pragmas, even though sanity was called
+This will run the C<unimport> function on these pragmas, even though insanity was called
 via the C<import> function (via C<use>).
 
 =head3 Perl versions
@@ -103,12 +103,12 @@ versions:
 
    # These are all the same:
    use v5.10.1;
-   use sanity 'v5.10.1';
-   use sanity v5.10.1;  # as a VSTRING
-   use sanity 5.10.1;   # works too
+   use insanity 'v5.10.1';
+   use insanity v5.10.1;  # as a VSTRING
+   use insanity 5.10.1;   # works too
 
    # Upgrade the Perl version of your favorite pragma
-   use sanity qw(NO:nonsense v5.12);
+   use insanity qw(NO:nonsense v5.12);
 
 Note that the version must be at least v5.8.  This should be fine for most people.  (If
 I get a ticket requesting support for a Perl version older than one released in 2002, I
@@ -116,9 +116,9 @@ will hunt you down and break your keyboard in half.)
 
 =head3 The Default
 
-What does C<sanity> do without any parameters?  Why my personal preference, of course :)
+What does C<insanity> do without any parameters?  Why my personal preference, of course :)
 It's listed in the C<meta pragma> section of the L<LIST OF FLAGS> below.  I detail the
-reasons behind my choices L<here|sanity::sanity>.
+reasons behind my choices L<here|insanity::insanity>.
 
 =head2 Hashes
 
@@ -130,7 +130,7 @@ bitmap can be compressed into a large ASCII (or UTF-8) "number".
 This number can be calculated using the flag C<PRINT_PRAGMA_HASH>:
 
    # This is merely the definition of uni::perl
-   use sanity (qw(
+   use insanity (qw(
       v5.10 strict feature/5.10
    ), (
       map { "warnings/$_/FATAL" } qw(closed threads internal debugging pack substr malloc
@@ -147,8 +147,8 @@ This number can be calculated using the flag C<PRINT_PRAGMA_HASH>:
    ), 'PRINT_PRAGMA_HASH');
 
    # Outputs:
-   # use sanity '!04[D{9Fhfqc-7m738S4HK6B#D5=v{,T$(0)F5i';  # Safer ASCII version
-   # use sanity '¡05༕ቑ釩腜쥸봱楇䐍퇥熠ᾯ緻褻真堩';  # Shorter UTF8 version
+   # use insanity '!04[D{9Fhfqc-7m738S4HK6B#D5=v{,T$(0)F5i';  # Safer ASCII version
+   # use insanity '¡05༕ቑ釩腜쥸봱楇䐍퇥熠ᾯ緻褻真堩';  # Shorter UTF8 version
 
 You can use that hash as the output illustrates without having to type out the entire big
 set of commands or flags.
@@ -166,26 +166,26 @@ A C<NO:> flag is NOT the same as negating a flag!  You also cannot remove the C<
 from a flag, as it's part of the name of the flag, not a special modifier.
 
    # These two are NOT the same!
-   use sanity 'NO:indirect';  # runs indirect->unimport()
-   use sanity '-indirect';    # Dies, as there is no such flag/alias
+   use insanity 'NO:indirect';  # runs indirect->unimport()
+   use insanity '-indirect';    # Dies, as there is no such flag/alias
 
    # This runs through the strictures alias and runs autovivification->unimport()
-   use sanity qw(strictures NO:autovivification);
+   use insanity qw(strictures NO:autovivification);
 
    # This runs through the strictures alias WITHOUT running indirect->unimport()
-   use sanity qw(strictures -NO:indirect);
+   use insanity qw(strictures -NO:indirect);
 
-   use sanity '-indirect';    # This isn't what you want...
-   no  sanity 'NO:indirect';  # ...you really meant to do this...
+   use insanity '-indirect';    # This isn't what you want...
+   no  insanity 'NO:indirect';  # ...you really meant to do this...
    use indirect;              # ...but this is better
 
 =head2 Special clearing of strict/warnings
 
-Since most people want exactly the strictness and warnings they specify, sanity will
+Since most people want exactly the strictness and warnings they specify, insanity will
 clear these out first before running through the list.
 
    # This...
-   use sanity qw(strict -strict/vars);
+   use insanity qw(strict -strict/vars);
 
    # ...is the same as this...
    no strict;
@@ -197,8 +197,8 @@ fatal to older Perls.  See L<https://rt.perl.org/rt3/Ticket/Display.html?id=1129
 =head2 "Author" pragmas
 
 Certain pragmas really only exist to make sure the code is designed right.  These
-pragmas are deemed "optional" by C<sanity>.  In other words, if the user doesn't
-have them, it will just silently ignore them and move on.  If C<sanity> thinks you're
+pragmas are deemed "optional" by C<insanity>.  In other words, if the user doesn't
+have them, it will just silently ignore them and move on.  If C<insanity> thinks you're
 an author/coder of the module itself (.git/svn/$ENV checks), it will give you a
 warning that they are missing, but move on.
 
@@ -278,7 +278,7 @@ This feature was borrowed from L<strictures> and tweaked.
       open (:utf8 :std)
       mro 'c3'
       Carp
-   sanity:
+   insanity:
       v5.10.1
       utf8
       open (:utf8 :std)
@@ -292,7 +292,7 @@ This feature was borrowed from L<strictures> and tweaked.
       no indirect 'fatal'
       no multidimensional
    perl5i::0 / 1 / 2 / latest:
-      [the real module] (the pragma is too insane to try to duplicate here)
+      [the real module] (the pragma is too sane to try to duplicate here)
    Acme::Very::Modern::Perl:  (a joke, but it's still here all the same)
       strict
       warnings
@@ -403,15 +403,15 @@ Am I missing something?  Let me know.
 
 =head1 TODO
 
-Actually need to write sanity::sanity POD.
+Actually need to write insanity::insanity POD.
 
 =head1 AVAILABILITY
 
-The project homepage is L<https://github.com/SineSwiper/sanity/wiki>.
+The project homepage is L<https://github.com/SineSwiper/insanity/wiki>.
 
 The latest version of this module is available from the Comprehensive Perl
 Archive Network (CPAN). Visit L<http://www.perl.com/CPAN/> to find a CPAN
-site near you, or see L<https://metacpan.org/module/sanity/>.
+site near you, or see L<https://metacpan.org/module/insanity/>.
 
 =for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
 
@@ -436,7 +436,7 @@ You can connect to the server at 'irc.perl.org' and join this channel: #distzill
 
 =head2 Bugs / Feature Requests
 
-Please report any bugs or feature requests via L<L<https://github.com/SineSwiper/sanity/issues>|GitHub>.
+Please report any bugs or feature requests via L<L<https://github.com/SineSwiper/insanity/issues>|GitHub>.
 
 =head1 AUTHOR
 
