--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,24 @@
 Revision History for sanity
 ===========================
 
+v1.01 2013-06-20
+----------------
+
+commit 49fd67eecb8c4ef436a7e9ce6998fac6ad5c1740
+Author: Brendan Byrd <Perl@ResonatorSoft.org>
+Date:   Thu Jun 20 19:57:10 2013 -0400
+
+    Fix BOM interaction with Module::Metadata during tar build
+       (by removing the BOM)
+
 v1.00 2013-06-06
 ----------------
+
+commit 1b512d7de71a37dd589de4c7b5f21cfeb7c6a930
+Author: Brendan Byrd <Perl@ResonatorSoft.org>
+Date:   Thu Jun 6 19:29:30 2013 -0400
+
+    Release v1.00
 
 commit 227f8493749157743b2595de7440053df855b468
 Author: Brendan Byrd <Perl@ResonatorSoft.org>
